--- a/exercícios/ex026/mq002/estilos/retrato.css
+++ b/exercícios/ex026/mq002/estilos/retrato.css
@@ -1,1 +1,6 @@
 @charset "UTF-8";
+
+body {
+    background: black url(../imagens/cev-portrait.jpg) center bottom no-repeat scroll;
+    background-size: contain;
+}
