--- a/exercícios/ex026/mq002/estilos/style.css
+++ b/exercícios/ex026/mq002/estilos/style.css
@@ -1,1 +1,16 @@
 @charset "UtF-8";
+
+*{
+    padding: 0px;
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: blue;
+}
+h1 {
+    color: white;
+    text-shadow: 2px 2px 0px rgba(0, 0, 109, 0.655);
+}
