--- a/exercícios/ex026/mq002/estilos/paisagem.css
+++ b/exercícios/ex026/mq002/estilos/paisagem.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
 body {
-    background: black url(../imagens/cev-landscape.jpg) left bottom no-repeat scroll;
+    background: url(../imagens/cev-landscape.jpg) center bottom no-repeat scroll;
     background-size: contain;
 }
