--- a/exercícios/ex026/mq004/estilos/mediaquery.css
+++ b/exercícios/ex026/mq004/estilos/mediaquery.css
@@ -3,5 +3,55 @@
 /* Media Queries */
 
 @media print {
-    
+    body {
+        background-image: url(../imagens/back-print.jpg);
+    }    
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#pc {display: none;}
+    img#print {display: block;}
+    img#tv {display: none;}
+}
+
+/* MOBILE
+@media screen and (max-width: 600px) {}
+@media screen and (min-width: 600px) and (max-width: 768px){} */
+
+/* TABLET */
+
+@media screen and (min-width: 768px) and (max-width: 992px){ 
+    body {
+        background: url(../imagens/back-tablet.jpg);  
+    }
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#pc {display: none;}
+    img#print {display: none;}
+    img#tv {display: none;}
+}
+
+/* DESKTOP */
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    body {
+        background: url(../imagens/back-pc.jpg) center top;
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#pc {display: block;}
+    img#print {display: none;}
+    img#tv {display: none;}
+}
+
+/* LARGE SCREENS */
+
+@media screen and (min-width: 1200px) {
+    body {
+        background: url(../imagens/back-tv.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#pc {display: none;}
+    img#print {display: none;}
+    img#tv {display: block;}
 }
