--- a/exercícios/ex026/mq004/estilos/style.css
+++ b/exercícios/ex026/mq004/estilos/style.css
@@ -32,7 +32,7 @@ img {
     display: block;
     margin: auto;
 }
-img#phone {}
+img#phone {display: block;}
 img#tablet {display: none;}
 img#pc {display: none;}
 img#print {display: none;}
