--- a/exercícios/ex026/mq005/estilos/style.css
+++ b/exercícios/ex026/mq005/estilos/style.css
@@ -16,27 +16,37 @@ h1{
 
 /* header */
 
-header, nav {
+header, menu {
     background-color: gray;
     color: white;
     text-align: center;
 }
-button {
-    display: none;
-    background-color: gray;
-    border: none;
+span#burguer {
+    width: 98.7vw;
+    background-color: rgb(52, 52, 52);
+    padding: 6px;
 }
-ul {
-    padding: 0.5em;
+span#burguer:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+menu {
+    display: none;
 }
 li {
-    display: inline;
+    padding: 5px;
+    background-color: rgb(93, 93, 93);
+    border-top: solid 3px gray;
+}
+li:hover {
+    background-color: gray;
+    font-weight: bold;
 }
 a {
     color: white;
     text-decoration: none;
-    padding: 4px;
-    background-color: rgb(93, 93, 93);    
+    padding: 4px;    
 }
 
 /* main */
@@ -53,4 +63,5 @@ section {
 }
 p {
     text-align: justify;
+    margin-bottom: 0.5em;
 }
