--- a/exercícios/ex026/mq005/estilos/mobile.css
+++ b/exercícios/ex026/mq005/estilos/mobile.css
@@ -6,7 +6,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 html, body {
-    height: 97vh;
+    height: 97.5vh;
     width: 100vw;
     background-color: rgb(213, 213, 213);
 }
@@ -22,8 +22,11 @@ header, menu {
     color: white;
     text-align: center;
 }
+header>h1 {
+    text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.211);
+}
 span#burguer {
-    width: 98.7vw;
+    width: 97.6vw;
     background-color: rgb(52, 52, 52);
     padding: 6px;
 }
