--- a/exercícios/ex027/flex013 - menu flexbox/estilos/style.css
+++ b/exercícios/ex027/flex013 - menu flexbox/estilos/style.css
@@ -10,12 +10,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: lightgray;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
 }
 
 header {
     background-color: gray;
-    padding: 1em;
+    padding: 0.5em;
 
     display: flex;
     flex-flow: row wrap;
@@ -24,7 +24,7 @@ header {
 }
 
 h1, nav {
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 h1 {
@@ -41,7 +41,7 @@ nav {
 nav > a {
     color: white;
     background-color: black;
-    padding: 5px;
+    padding: 0.5em;
     margin: 5px;
     text-decoration: none;
 }
@@ -49,7 +49,7 @@ nav > a {
 nav > a:hover {
     color: black;
     background-color: white;
-    transition: all 0.4 ease;
+    transition: all .3s ease;
 } 
 
 main {
